<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:gravity="center">
  	
  	
  	
  	<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="horizontal" android:gravity="center">
		<LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" >
			<TextView android:text="@string/Data_medida" android:layout_height="wrap_content" android:layout_width="wrap_content" />
			<TextView android:id="@+id/data_medida" android:layout_height="wrap_content" android:layout_width="wrap_content" />
		</LinearLayout>
		<LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" >
			<Button android:id="@+id/btn_data_medida" android:text="@string/Data" style="@style/default_wrap_content"/>
  			<Button android:id="@+id/btn_hoje_medida" android:text="@string/Hoje" style="@style/default_wrap_content"/>
		</LinearLayout>  	  	
  	</LinearLayout>
  	
  	
  	<ScrollView android:layout_height="fill_parent" android:layout_width="fill_parent"> 
  	
  	<FrameLayout android:layout_height="fill_parent" android:layout_width="fill_parent">
    <TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/tableLayout1" android:gravity="center">
        <TableRow style="@style/panel_medidas_tablerow" >
        		<!-- Panel Altura -->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Altura" style="@style/panel_medidas_textview" />  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/altura" style="@style/panel_medidas_edittext" >
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel peso -->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Peso" style="@style/panel_medidas_textview" />  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/peso" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel Cintura -->
	   			<LinearLayout style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Cintura" style="@style/panel_medidas_textview"></TextView>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/cintura" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
        </TableRow>
        <TableRow style="@style/panel_medidas_tablerow">
        
        		<!-- Panel Biceps esq -->
	        	<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Biceps_esq" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/biceps_esq" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel Biceps direito -->
	        	<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Biceps_dir" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/biceps_dir" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel Peitoral -->
	        	<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Peitoral" style="@style/panel_medidas_textview"></TextView>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/biceps_dir" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
        </TableRow>
        <TableRow style="@style/panel_medidas_tablerow">
        
        		<!-- Panel Triceps esq -->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Triceps_esq" style="@style/panel_medidas_textview"></TextView>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/triceps_esq" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel Triceps dir -->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Triceps_dir" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/triceps_dir" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel Coxa esq-->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Coxa_esq" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/coxa_esq" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
        </TableRow>
        <TableRow style="@style/panel_medidas_tablerow">
       			 
	   			
	   			<!-- Panel Coxa dir -->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Coxa_dir" style="@style/panel_medidas_textview"></TextView>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/coxa_dir" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel quadril -->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Quadril" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/quadril" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel Panturrilha esq-->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Panturrilha_esq" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/panturrilha_esq" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   	</TableRow>
	   	<TableRow style="@style/panel_medidas_tablerow">
	   			<!-- Panel Panturrilha dir -->
	   			<LinearLayout style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Panturrilha_dir" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/panturrilha_dir" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel Ombro -->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Ombro" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/ombro" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<!-- Panel Antebraco esq -->
	   			<LinearLayout style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Antebraco_esq" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/antebraco_esq" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   				
	   	</TableRow>
	   	<TableRow style="@style/panel_medidas_tablerow" >

	   			<!-- Panel Antebraco dir -->
	   			<LinearLayout  style="@style/panel_medidas">
			        <LinearLayout style="@style/panel_medidas_top">
			            <TextView android:text="@string/Antebraco_dir" style="@style/panel_medidas_textview"/>  
			        </LinearLayout>
			         <LinearLayout style="@style/panel_medidas_conteudo">
			             <EditText android:id="@+id/antebraco_dir" style="@style/panel_medidas_edittext">
			                 <requestFocus></requestFocus>
			             </EditText>
			         </LinearLayout>
	   			</LinearLayout>
	   			
	   			<LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" ></LinearLayout>
				
				<Button android:id="@+id/btn_salvar_medidas" style="@style/panel_medidas_btn" android:text="@string/Salvar" />
	   	</TableRow>
    </TableLayout>
  
 </FrameLayout>
 
 </ScrollView>
   
  
</LinearLayout>
